deleted:    .gitignore 	new file:   .gradle/8.8/checksums/checksums.lock 	modified:   .gradle/8.8/checksums/md5-checksums.bin 	modified:   .gradle/8.8/checksums/sha1-checksums.bin 	new file:   .gradle/8.8/dependencies-accessors/gc.properties 	new file:   .gradle/8.8/executionHistory/executionHistory.bin 	new file:   .gradle/8.8/executionHistory/executionHistory.lock 	new file:   .gradle/8.8/fileChanges/last-build.bin 	new file:   .gradle/8.8/fileHashes/fileHashes.bin 	new file:   .gradle/8.8/fileHashes/fileHashes.lock 	new file:   .gradle/8.8/fileHashes/resourceHashesCache.bin 	new file:   .gradle/buildOutputCleanup/buildOutputCleanup.lock 	new file:   .gradle/buildOutputCleanup/cache.properties 	new file:   .gradle/buildOutputCleanup/outputFiles.bin 	new file:   .gradle/file-system.probe 	new file:   .gradle/vcs-1/gc.properties 	modified:   CHANGELOG.md 	deleted:    LICENSE 	deleted:    MOD_INDEX.md 	deleted:    MONITOR_README.md 	new file:   PORT_STATUS.md 	modified:   README.md 	modified:   build.gradle 	modified:   gradle.properties 	deleted:    scripts/check-localization.js 	deleted:    scripts/check-localization.ps1 	modified:   settings.gradle 	new file:   src/main/java/com/wavedefense/WaveDefenceMod.java 	deleted:    src/main/java/com/wavedefense/WaveDefenseMod.java 	deleted:    src/main/java/com/wavedefense/audit/WaveDefenseAuditLog.java.corrupted 	deleted:    src/main/java/com/wavedefense/backup/WaveDefenseBackupSystem.java 	modified:   src/main/java/com/wavedefense/commands/WaveDefenseAdminCommands.java 	modified:   src/main/java/com/wavedefense/commands/WaveDefenseCommand.java 	deleted:    src/main/java/com/wavedefense/compat/MineAndSlashCompat.java 	deleted:    src/main/java/com/wavedefense/compat/TaczCompat.java 	modified:   src/main/java/com/wavedefense/config/WaveDefenseConfig.java 	modified:   src/main/java/com/wavedefense/config/WaveGameRules.java 	modified:   src/main/java/com/wavedefense/data/CapturePoint.java 	modified:   src/main/java/com/waved