@@ -2,15 +2,15 @@ package com.wavedefense.gui;
 
 import com.wavedefense.wave.PlayerWaveData;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.resources.language.I18n;
+import com.mojang.blaze3d.matrix.MatrixStack;
+import net.minecraft.client.resources.I18n;
 
 import java.util.List;
 import java.util.Map;
 
 public class PlayerHUD {
 
-    public static void render(GuiGraphics g, float partialTick, int width, int height) {
+    public static void render(MatrixStack g, float partialTick, int width, int height) {
         Minecraft mc = Minecraft.getInstance();
         if (mc.player == null) return;
 
@@ -21,7 +21,7 @@ public class PlayerHUD {
         int points = data.getPlayerPoints(); // синхронізується з сервера через SyncPlayerDataPacket
         String pointsText = I18n.get("wavedefense.hud.points", points);
         int textWidth = mc.font.width(pointsText);
-        g.drawString(mc.font, pointsText, width - textWidth - 10, height - 20, 0xFFFFFF);
+        com.wavedefense.gui.GuiCompat.drawString(g, mc.font, pointsText, width - textWidth - 10, height - 20, 0xFFFFFF);
 
         // ── Лічильник хвиль (нижній правий, над таймером) ────────
         com.wavedefense.data.Location currentLoc = data.getCurrentLocation();
@@ -32,14 +32,14 @@ public class PlayerHUD {
             String waveText = I18n.get("wavedefense.hud.wave_counter",
                     data.getCurrentWave(), totalWaves);
             int ww = mc.font.width(waveText);
-            g.drawString(mc.font, waveText, width - ww - 10, height - 50, 0xFFE0A020);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, waveText, width - ww - 10, height - 50, 0xFFE0A020);
         }
 
         // ── Таймер (нижній правий, над поінтами) ──────────────────
         if (data.getVictoryCountdownSec() <= 0 && data.isTimerActive() && data.isShowTimer()) {
             String timerText = I18n.get("wavedefense.hud.next_wave_timer", data.getTimeUntilNextWave());
             int tw = mc.font.width(timerText);
-            g.drawString(mc.font, timerText, width - tw - 10, height - 35, 0xFFFFFF);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, timerText, width - tw - 10, height - 35, 0xFFFFFF);
         }
 
         // ── Тімейт-панель (лівий бік) ─────────────────────────────
@@ -65,7 +65,7 @@ public class PlayerHUD {
      * B2: top-right 3-line panel for DM mode showing this player's kills,
      * the current leader, and the kill target.
      */
-    private static void renderDmLeaderboard(GuiGraphics g, Minecraft mc, int width,
+    private static void renderDmLeaderboard(MatrixStack g, Minecraft mc, int width,
                                              String myName, int killTarget) {
         List<ClientPvpStateManager.PlayerRow> players = ClientPvpStateManager.getPlayers();
         if (players.isEmpty()) return;
@@ -88,10 +88,10 @@ public class PlayerHUD {
         int y = 8;
 
         // Background panel
-        g.fill(x - 4, y - 2, x + w + 4, y + 30, 0x80000000);
-        g.drawString(mc.font, line1, x, y,      0xFFE0A020);
-        g.drawString(mc.font, line2, x, y + 10, 0xFFCFCFCF);
-        g.drawString(mc.font, line3, x, y + 20, 0xFF80FF80);
+        com.wavedefense.gui.GuiCompat.fill(g, x - 4, y - 2, x + w + 4, y + 30, 0x80000000);
+        com.wavedefense.gui.GuiCompat.drawString(g, mc.font, line1, x, y,      0xFFE0A020);
+        com.wavedefense.gui.GuiCompat.drawString(g, mc.font, line2, x, y + 10, 0xFFCFCFCF);
+        com.wavedefense.gui.GuiCompat.drawString(g, mc.font, line3, x, y + 20, 0xFF80FF80);
     }
 
     private static String trunc(String s, int max) {
@@ -99,7 +99,7 @@ public class PlayerHUD {
         return s.length() > max ? s.substring(0, max - 1) + "…" : s;
     }
 
-    private static void renderTeamPanel(GuiGraphics g, Minecraft mc) {
+    private static void renderTeamPanel(MatrixStack g, Minecraft mc) {
         List<ClientTeammatesManager.PlayerEntry> players = ClientTeammatesManager.getPlayers();
         // Показуємо лише коли ≥ 2 гравці (при 1 гравці панель не потрібна)
         if (players.size() < 2) return;
@@ -124,19 +124,19 @@ public class PlayerHUD {
 
             // ── Фон рядка ─────────────────────────────────────────
             int rowW = NAME_W + PAD + BAR_W;
-            g.fill(X - 1, y - 1, X + rowW + 1, y + ROW_H - 2, isMe ? 0x44004400 : 0x44000000);
+            com.wavedefense.gui.GuiCompat.fill(g, X - 1, y - 1, X + rowW + 1, y + ROW_H - 2, isMe ? 0x44004400 : 0x44000000);
 
             // ── Нік (обрізаний) ───────────────────────────────────
             String prefix = isMe ? "§a" : (alive ? "§f" : "§8");
             String name   = prefix + truncate(e.name(), 8);
-            g.drawString(mc.font, name, X, y + 1, 0xFFFFFF, false);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, name, X, y + 1, 0xFFFFFF, false);
 
             // ── HP бар ────────────────────────────────────────────
             int bx = X + NAME_W + PAD;
             int by = y + (ROW_H - BAR_H) / 2;
 
             // Фон
-            g.fill(bx, by, bx + BAR_W, by + BAR_H, 0xFF1A1A1A);
+            com.wavedefense.gui.GuiCompat.fill(g, bx, by, bx + BAR_W, by + BAR_H, 0xFF1A1A1A);
 
             if (alive && e.maxHp() > 0) {
                 float ratio  = Math.min(1f, (float) e.hp() / e.maxHp());
@@ -144,20 +144,20 @@ public class PlayerHUD {
                 int col = ratio > 0.5f ? 0xFF3CC93C
                         : ratio > 0.25f ? 0xFFFFA020
                         : 0xFFE03030;
-                g.fill(bx, by, bx + filled, by + BAR_H, col);
+                com.wavedefense.gui.GuiCompat.fill(g, bx, by, bx + filled, by + BAR_H, col);
             } else if (!alive) {
                 // Червоний крест замість бару
-                g.fill(bx, by, bx + BAR_W, by + BAR_H, 0x88440000);
+                com.wavedefense.gui.GuiCompat.fill(g, bx, by, bx + BAR_W, by + BAR_H, 0x88440000);
                 int cx2 = bx + BAR_W / 2;
-                g.fill(cx2 - 1, by,     cx2 + 1, by + BAR_H, 0xFFCC2222);
-                g.fill(bx,      by + 1, bx + BAR_W, by + 3,  0xFFCC2222);
+                com.wavedefense.gui.GuiCompat.fill(g, cx2 - 1, by,     cx2 + 1, by + BAR_H, 0xFFCC2222);
+                com.wavedefense.gui.GuiCompat.fill(g, bx,      by + 1, bx + BAR_W, by + 3,  0xFFCC2222);
             }
 
             // Рамка бару (1px)
-            g.fill(bx,            by,          bx + BAR_W, by + 1,        0xFF555555);
-            g.fill(bx,            by + BAR_H - 1, bx + BAR_W, by + BAR_H, 0xFF555555);
-            g.fill(bx,            by,          bx + 1,     by + BAR_H,    0xFF555555);
-            g.fill(bx + BAR_W - 1, by,         bx + BAR_W, by + BAR_H,   0xFF555555);
+            com.wavedefense.gui.GuiCompat.fill(g, bx,            by,          bx + BAR_W, by + 1,        0xFF555555);
+            com.wavedefense.gui.GuiCompat.fill(g, bx,            by + BAR_H - 1, bx + BAR_W, by + BAR_H, 0xFF555555);
+            com.wavedefense.gui.GuiCompat.fill(g, bx,            by,          bx + 1,     by + BAR_H,    0xFF555555);
+            com.wavedefense.gui.GuiCompat.fill(g, bx + BAR_W - 1, by,         bx + BAR_W, by + BAR_H,   0xFF555555);
         }
     }
 
@@ -166,7 +166,7 @@ public class PlayerHUD {
      * Shows each capture point name, its current owner (colour-coded), a capture progress bar,
      * and the team score (or round timer if the location is in timer mode).
      */
-    private static void renderCtpOverlay(GuiGraphics g, Minecraft mc, int screenW) {
+    private static void renderCtpOverlay(MatrixStack g, Minecraft mc, int screenW) {
         Map<String, String>  owners   = ClientCtpStateManager.getPointOwners();
         Map<String, String>  names    = ClientCtpStateManager.getPointNames();
         Map<String, Integer> progress = ClientCtpStateManager.getCaptureProgress();
@@ -195,25 +195,25 @@ public class PlayerHUD {
             int    maxTicks   = timeTicks.getOrDefault(pointId, 1);
 
             // Background panel
-            g.fill(x - 2, startY - 1, x + ENTRY_W + 2, startY + ROW_H + 1, 0x88000000);
+            com.wavedefense.gui.GuiCompat.fill(g, x - 2, startY - 1, x + ENTRY_W + 2, startY + ROW_H + 1, 0x88000000);
 
             // Point label
             String label = truncate(displayName, 10);
             int lw = mc.font.width(label);
-            g.drawString(mc.font, label, x + (ENTRY_W - lw) / 2, startY, 0xFFFFFFFF, false);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, label, x + (ENTRY_W - lw) / 2, startY, 0xFFFFFFFF, false);
 
             // Owner name
             int ownerColor = owner.isEmpty() ? 0xFFAAAAAA : teamColor(owner);
             String ownerLabel = owner.isEmpty() ? I18n.get("wavedefense.hud.ctp_neutral") : truncate(owner, 8);
             int ow = mc.font.width(ownerLabel);
-            g.drawString(mc.font, ownerLabel, x + (ENTRY_W - ow) / 2, startY + 8, ownerColor, false);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, ownerLabel, x + (ENTRY_W - ow) / 2, startY + 8, ownerColor, false);
 
             // Capture progress bar (only shown when being contested, i.e. prog > 0 and < 100)
             int barY = startY + ROW_H - BAR_H;
-            g.fill(x, barY, x + ENTRY_W, barY + BAR_H, 0xFF222222);
+            com.wavedefense.gui.GuiCompat.fill(g, x, barY, x + ENTRY_W, barY + BAR_H, 0xFF222222);
             if (prog > 0) {
                 int filled = (int)(ENTRY_W * (prog / 100.0f));
-                g.fill(x, barY, x + filled, barY + BAR_H, 0xFFFFD700);
+                com.wavedefense.gui.GuiCompat.fill(g, x, barY, x + filled, barY + BAR_H, 0xFFFFD700);
             }
 
             col++;
@@ -236,13 +236,13 @@ public class PlayerHUD {
             }
             String scoreText = sb.toString();
             int sw = mc.font.width(scoreText);
-            g.drawString(mc.font, scoreText, (screenW - sw) / 2, startY + ROW_H + 3, 0xFFFFFFFF, false);
+            com.wavedefense.gui.GuiCompat.drawString(g, mc.font, scoreText, (screenW - sw) / 2, startY + ROW_H + 3, 0xFFFFFFFF, false);
         }
     }
 
     /** Returns a distinct colour for a team name (consistent across calls). */
     private static int teamColor(String team) {
-        if (team == null || team.isBlank()) return 0xFFAAAAAA;
+        if (team == null || team.trim().isEmpty()) return 0xFFAAAAAA;
         // Map common team name patterns to colours; fall back to hash-based colour
         String lower = team.toLowerCase();
         if (lower.contains("red"))   return 0xFFFF5555;
