@@ -1,18 +1,18 @@
 package com.wavedefense.wave;
 
-import com.wavedefense.WaveDefenseMod;
+import net.minecraft.util.text.TranslationTextComponent;
+
+import com.wavedefense.WaveDefenceMod;
 import com.wavedefense.wave.PlayerWaveData;
 import com.wavedefense.data.Location;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.particles.ParticleOptions;
-import net.minecraft.core.particles.ParticleTypes;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.protocol.game.*;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.particles.IParticleData;
+import net.minecraft.particles.ParticleTypes;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.world.server.ServerWorld;
+import net.minecraft.entity.player.ServerPlayerEntity;
 
 import java.util.*;
 
@@ -27,7 +27,7 @@ public class BoundaryManager {
     public BoundaryManager(WaveContext ctx) { this.ctx = ctx; }
 
     public void tick(WaveManager wm) {
-        if (WaveDefenseMod.getServer() == null) return;
+        if (WaveDefenceMod.getServer() == null) return;
         tickCounter++;
 
         // Частинки та шкода — раз на секунду
@@ -44,7 +44,7 @@ public class BoundaryManager {
             BlockPos center = loc.getPlayerSpawn();
             if (center == null) continue;
 
-            ServerPlayer player = WaveDefenseMod.getServer().getPlayerList().getPlayer(uid);
+            ServerPlayerEntity player = WaveDefenceMod.getServer().getPlayerList().getPlayer(uid);
             if (player == null) continue;
             if (player.isSpectator()) continue;
 
@@ -66,57 +66,59 @@ public class BoundaryManager {
 
     // ── Наслідки ────────────────────────────────────────────────────────
 
-    private void applyConsequence(WaveManager wm, ServerPlayer player, UUID uid, Location loc, boolean doSecond) {
+    private void applyConsequence(WaveManager wm, ServerPlayerEntity player, UUID uid, Location loc, boolean doSecond) {
+        // 1.16.5 port: classic switch (no -> expressions). Each case wrapped in
+        // a block so local variables don't leak between cases.
         switch (loc.getBoundaryConsequence()) {
 
-            case TIMER_SURRENDER -> {
+            case TIMER_SURRENDER: {
                 int ticks = ctx.leaveCountdownTicks.getOrDefault(uid, 0);
                 if (ticks <= 0) {
                     int secs = loc.getLocationLeaveTimerSec();
                     ctx.leaveCountdownTicks.put(uid, secs * 20);
                     sendBoundaryTitle(player,
-                        Component.translatable("wavedefense.msg.boundary_return"),
-                        Component.translatable("wavedefense.msg.boundary_timer", secs));
+                        new TranslationTextComponent("wavedefense.msg.boundary_return"),
+                        new TranslationTextComponent("wavedefense.msg.boundary_timer", secs));
                 } else {
                     int remaining = ticks - 1;
                     ctx.leaveCountdownTicks.put(uid, remaining);
                     if (remaining <= 0) {
-                        // Час вийшов — здача (перевіряємо першою, щоб не показувати «0 сек»)
                         ctx.leaveCountdownTicks.remove(uid);
                         wm.surrenderPlayer(player);
                     } else if (remaining % 20 == 0) {
-                        // Показуємо тільки якщо remaining > 0 — не буде «0 сек»
                         sendBoundaryTitle(player,
-                            Component.translatable("wavedefense.msg.boundary_out_of_zone"),
-                            Component.translatable("wavedefense.msg.boundary_timer", remaining / 20));
+                            new TranslationTextComponent("wavedefense.msg.boundary_out_of_zone"),
+                            new TranslationTextComponent("wavedefense.msg.boundary_timer", remaining / 20));
                         wm.syncPlayerData(player);
                     }
                 }
+                break;
             }
 
-            case DAMAGE -> {
-                // Шкода тільки раз на секунду
+            case DAMAGE: {
                 if (doSecond) {
                     float dmg = loc.getBoundaryDamagePerSec();
-                    if (dmg > 0) player.hurt(player.damageSources().magic(), dmg);
+                    // 1.16.5: DamageSource.MAGIC is the equivalent of damageSources().magic()
+                    if (dmg > 0) player.hurt(net.minecraft.util.DamageSource.MAGIC, dmg);
                     sendBoundaryTitle(player,
-                        Component.translatable("wavedefense.msg.boundary_unsafe"),
-                        Component.translatable("wavedefense.msg.boundary_damage", dmg));
+                        new TranslationTextComponent("wavedefense.msg.boundary_unsafe"),
+                        new TranslationTextComponent("wavedefense.msg.boundary_damage", dmg));
                 }
+                break;
             }
 
-            case TELEPORT_BACK -> {
-                // Миттєва телепортація назад на точку спавну
-                wm.teleportToSafeSpawn(player, loc.getPlayerSpawn(),
-                    loc.getPlayerSpawnRadius());
+            case TELEPORT_BACK: {
+                wm.teleportToSafeSpawn(player, loc.getPlayerSpawn(), loc.getPlayerSpawnRadius());
                 player.displayClientMessage(
-                    Component.translatable("wavedefense.msg.teleported_back"), true);
+                    new TranslationTextComponent("wavedefense.msg.teleported_back"), true);
                 ctx.leaveCountdownTicks.remove(uid);
+                break;
             }
 
-            case INSTANT_SURRENDER -> {
+            case INSTANT_SURRENDER: {
                 ctx.leaveCountdownTicks.remove(uid);
                 wm.surrenderPlayer(player);
+                break;
             }
         }
     }
@@ -124,7 +126,7 @@ public class BoundaryManager {
     // ── Частинки кордону ────────────────────────────────────────────────
 
     private void tickBorderParticles() {
-        if (WaveDefenseMod.getServer() == null) return;
+        if (WaveDefenceMod.getServer() == null) return;
         // Збираємо унікальні активні локації з кордоном і частинками
         Set<String> done = new HashSet<>();
         for (PlayerWaveData data : ctx.playerData.values()) {
@@ -136,22 +138,22 @@ public class BoundaryManager {
             if (loc.getPlayerSpawn() == null) continue;
 
             // Знаходимо world через першого гравця локації
-            List<ServerPlayer> inLoc = WaveDefenseMod.getServer().getPlayerList()
+            List<ServerPlayerEntity> inLoc = WaveDefenceMod.getServer().getPlayerList()
                 .getPlayers().stream()
                 .filter(p -> {
                     PlayerWaveData d = ctx.playerData.get(p.getUUID());
                     return d != null && d.getCurrentLocation() != null
                         && d.getCurrentLocation().getName().equals(loc.getName());
                 })
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
             if (inLoc.isEmpty()) continue;
-            ServerLevel world = inLoc.get(0).serverLevel();
+            ServerWorld world = ((net.minecraft.world.server.ServerWorld) inLoc.get(0).level);
             spawnBorderRing(world, loc);
         }
     }
 
-    private void spawnBorderRing(ServerLevel world, Location loc) {
-        ParticleOptions particle = resolveParticle(loc.getBoundaryParticleType());
+    private void spawnBorderRing(ServerWorld world, Location loc) {
+        net.minecraft.particles.IParticleData particle = resolveParticle(loc.getBoundaryParticleType());
         int radius   = loc.getLocationBoundaryRadius();
         int height   = loc.getBoundaryParticleHeight();
         int count    = loc.getBoundaryParticleCount();
@@ -171,47 +173,48 @@ public class BoundaryManager {
 
     // ── Заголовки ────────────────────────────────────────────────────────
 
-    private void sendBoundaryTitle(ServerPlayer p, String title, String subtitle) {
+    private void sendBoundaryTitle(ServerPlayerEntity p, String title, String subtitle) {
         sendBoundaryTitle(p,
-            net.minecraft.network.chat.Component.literal(title),
-            net.minecraft.network.chat.Component.literal(subtitle));
+            new net.minecraft.util.text.StringTextComponent(title),
+            new net.minecraft.util.text.StringTextComponent(subtitle));
     }
 
     /** Component-overload: delivers translatable title/subtitle to the client in their own language. */
-    private void sendBoundaryTitle(ServerPlayer p,
-                                   net.minecraft.network.chat.Component title,
-                                   net.minecraft.network.chat.Component subtitle) {
-        p.connection.send(new ClientboundSetTitleTextPacket(title));
-        p.connection.send(new ClientboundSetSubtitleTextPacket(subtitle));
-        p.connection.send(new ClientboundSetTitlesAnimationPacket(5, 30, 8));
+    private void sendBoundaryTitle(ServerPlayerEntity p,
+                                   net.minecraft.util.text.ITextComponent title,
+                                   net.minecraft.util.text.ITextComponent subtitle) {
+        p.connection.send(new net.minecraft.network.play.server.STitlePacket(net.minecraft.network.play.server.STitlePacket.Type.TITLE, title));
+        p.connection.send(new net.minecraft.network.play.server.STitlePacket(net.minecraft.network.play.server.STitlePacket.Type.SUBTITLE, subtitle));
+        p.connection.send(new net.minecraft.network.play.server.STitlePacket(5, 30, 8));
     }
 
-    private void clearTitle(ServerPlayer p) {
-        p.connection.send(new ClientboundClearTitlesPacket(true));
+    private void clearTitle(ServerPlayerEntity p) {
+        // 1.16.5: SPlayerListItemPacket has no CLEAR; use empty title to reset
+        p.connection.send(new net.minecraft.network.play.server.STitlePacket(net.minecraft.network.play.server.STitlePacket.Type.CLEAR, null));
     }
 
     // ── Утиліти ──────────────────────────────────────────────────────────
 
-    public static ParticleOptions resolveParticle(String id) {
-        if (id == null || id.isBlank()) return ParticleTypes.SMOKE;
+    public static net.minecraft.particles.IParticleData resolveParticle(String id) {
+        if (id == null || id.trim().isEmpty()) return ParticleTypes.SMOKE;
         try {
-            var type = BuiltInRegistries.PARTICLE_TYPE.get(new ResourceLocation(id));
-            if (type instanceof net.minecraft.core.particles.SimpleParticleType spt) return spt;
+            net.minecraft.particles.ParticleType<?> type = net.minecraftforge.registries.ForgeRegistries.PARTICLE_TYPES.getValue(new ResourceLocation(id));
+            if (type instanceof net.minecraft.particles.BasicParticleType) { net.minecraft.particles.BasicParticleType spt = (net.minecraft.particles.BasicParticleType) type; return spt; }
         } catch (Exception ignored) {}
-        return switch (id) {
-            case "minecraft:flame"          -> ParticleTypes.FLAME;
-            case "minecraft:smoke"          -> ParticleTypes.SMOKE;
-            case "minecraft:crit"           -> ParticleTypes.CRIT;
-            case "minecraft:large_smoke"    -> ParticleTypes.LARGE_SMOKE;
-            case "minecraft:portal"         -> ParticleTypes.PORTAL;
-            case "minecraft:enchant"        -> ParticleTypes.ENCHANT;
-            case "minecraft:end_rod"        -> ParticleTypes.END_ROD;
-            case "minecraft:soul_fire_flame"-> ParticleTypes.SOUL_FIRE_FLAME;
-            case "minecraft:snowflake"      -> ParticleTypes.SNOWFLAKE;
-            case "minecraft:dripping_lava"  -> ParticleTypes.DRIPPING_LAVA;
-            case "minecraft:dust"           -> new net.minecraft.core.particles.DustParticleOptions(new org.joml.Vector3f(1f, 0f, 0f), 1.0f);
-            default                         -> ParticleTypes.SMOKE;
-        };
+        switch (id) {
+            case "minecraft:flame": return ParticleTypes.FLAME;
+            case "minecraft:smoke": return ParticleTypes.SMOKE;
+            case "minecraft:crit": return ParticleTypes.CRIT;
+            case "minecraft:large_smoke": return ParticleTypes.LARGE_SMOKE;
+            case "minecraft:portal": return ParticleTypes.PORTAL;
+            case "minecraft:enchant": return ParticleTypes.ENCHANT;
+            case "minecraft:end_rod": return ParticleTypes.END_ROD;
+            case "minecraft:soul_fire_flame": return ParticleTypes.SOUL_FIRE_FLAME;
+            case "minecraft:dripping_lava": return ParticleTypes.DRIPPING_LAVA;
+            case "minecraft:dust": return new net.minecraft.particles.RedstoneParticleData(1f, 0f, 0f, 1.0f);
+            default: return ParticleTypes.SMOKE;
+
+        }
     }
 
     // ─────────────────────────────────────────────────────────────────
@@ -219,14 +222,14 @@ public class BoundaryManager {
     // ─────────────────────────────────────────────────────────────────
 
     /** Серіалізація стану BoundaryManager. */
-    public CompoundTag save() {
-        CompoundTag tag = new CompoundTag();
+    public CompoundNBT save() {
+        CompoundNBT tag = new CompoundNBT();
         tag.putInt("tickCounter", tickCounter);
         return tag;
     }
 
     /** Відновлення стану BoundaryManager. */
-    public void load(CompoundTag tag) {
+    public void load(CompoundNBT tag) {
         tickCounter = tag.getInt("tickCounter");
     }
 
@@ -239,7 +242,7 @@ public class BoundaryManager {
         if (spawnPos == null) return;
         
         for (UUID uuid : playerUuids) {
-            ServerPlayer player = WaveDefenseMod.getServer().getPlayerList().getPlayer(uuid);
+            ServerPlayerEntity player = WaveDefenceMod.getServer().getPlayerList().getPlayer(uuid);
             if (player != null) {
                 // Перевіряємо чи гравець вже на цій локації
                 PlayerWaveData data = wm.getPlayerData(uuid);
